name:                wonderland-katas
version:             0.1.0.0
synopsis:            Port from Clojure
description:         Port from Clojure
homepage:            https://github.com/FranklinChen/wonderland-katas-haskell
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Kata.AlphabetCipher
  build-depends:       base >= 4 && <= 5
                     , array

executable wonderland-katas
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4 && <= 5
                     , wonderland-katas

test-suite spec
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  ghc-options:         -Wall
  main-is:             Spec.hs
  build-depends:       base >= 4 && <= 5
                     , wonderland-katas
                     , hspec
                     , QuickCheck

source-repository head
  type:                 git
  location:             https://github.com/FranklinChen/wonderland-katas-haskell
